--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "main": "src/server.js",
   "type": "module",
+  "engines": { "node": "18.x" },
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "postinstall": "cd ../frontend && npm ci && npm run build"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
